resources/insights-common/allow-to-istio-admission-controller.networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-admission-controller
spec:
  ingress:
  - {}
  podSelector:
    matchLabels:
      name: istio-operator
  policyTypes:
  - Ingress
