resources/insights-common/clowder-console.networkpolicy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-openshift-console-namespace
spec:
  podSelector: 
    matchLabels:
      app: clowder-plugin
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-console
  policyTypes:
    - Ingress
