resources/insights-common/clowder-plugin-allow-from-openshift-console.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: clowder-plugin-allow-from-console-namespace
spec:
  podSelector: {}
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: openshift-console
