resources/insights-common/ephemeral-namespace-operator-allow-to-admission-controller.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ephemeral-namespace-operator-allow-to-admission-controller
spec:
  ingress:
  - {}
  podSelector:
    matchLabels:
      control-plane: controller-manager
  policyTypes:
  - Ingress
